--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,37 +4,45 @@
     margin: 0;
 }
 
+/* Webpage background */
 body {
     background-color: #d9dcd6;
 }
 
-/* h1 element of the webpage */
+/* h1 main title of the page */
 h1 {
     font-size: 48px;
     color: #ffffff;
     display: inline-block;
 }
 
+/* a link of the page */
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
+/* p paragraph of the page */
 p {
     font-size: 16px;
 }
 
+/* /////START HEADER section CSS///// */
+
+/* Main header block */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
 }
 
-.seo {
+/* Header  the part "SEO" inside the logo change color */
+#header-seo {
     color: #d9dcd6;
 }
 
-.header div {
+/* Header menu section */
+.header-menu {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -42,15 +50,20 @@ p {
     font-size: 20px;
 }
 
-.header div ul {
+/* Default item of list marker */
+.header-menu ul {
     list-style-type: none;
 }
 
-.header div ul li {
+/* Inline menu list */
+.header-menu li {
     display: inline-block;
     margin-left: 25px;
 }
+/* /////END HEADER section CSS///// */
 
+/* /////START HERO section CSS///// */
+/* Main hero image block */
 .hero {
     height: 800px;
     width: 100%;
@@ -58,24 +71,54 @@ p {
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
+    display: flex;
 }
+/* /////END HERO section CSS///// */
 
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-.float-right {
-    float: right;
-    margin-left: 25px;
-}
-
+/* /////START CONTENT section CSS///// */
+/* Content FULL block (all 3 sections) */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #ffffff;
 }
 
+/* h2 title dimension and spacing with copy element */
+.content h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+/* images dimensions for content sections */
+.content img {
+    max-height: 200px;
+}
+
+/* Content section CSS */
+.content-section {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    background-color: #0072bb;
+}
+
+/* Thumbnail float left */
+.img-float-left {
+    float: left;
+    margin-right: 25px;
+}
+
+/* Thumbnail float right */
+.img-float-right {
+    float: right;
+    margin-left: 25px;
+}
+/* /////END CONTENT section CSS///// */
+
+/* /////START BENEFITS section CSS///// */
+/* Benefit block */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -85,110 +128,29 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
-}
-
-.benefit-lead {
-    margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+/* Benefit h3 title */
+.benefit-section h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+/* Benefit icon dimension and position */
+.benefit-section img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
+/* Benefit elements bottom spacing */
+.benefit-section {
+    margin-bottom: 32px;    
 }
+/* /////END BENEFITS section CSS///// */
 
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
+/* FOOTER */
 .footer {
     padding: 30px;
     clear: both;
@@ -196,6 +158,7 @@ p {
     text-align: center;
 }
 
+/* Footer h2 title */
 .footer h2 {
     font-size: 20px;
 }
